[package]
name = "examples"
version = "0.1.0"
authors = ["Daniel YU <i@icymint.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
fall-log = { path = "../fall-log" }
fall-web = { path = "../fall-web", features = ["redis"]}
tracing = "0.1"
actix-web = "3.0.0-alpha.1"
actix-rt = "1.1"

[build-dependencies]
vergen = "3"