[package]
name = "fall-web"
version = "0.1.0"
authors = ["Daniel YU <i@icymint.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fall-log = "*"
actix-web = "3.0.0-alpha.1"
actix-http = "2.0.0-alpha.2"
actix-service = "1.0"

futures-core = "0.3"
futures-util ="0.3"

actix-rt ="1.0"
rand = "0.7"